# beadify

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.beads/: events.jsonl
.github/workflows/: build.yml
.specstory/: .project.json
.specstory/history/: 2026-01-09_14-36-54Z-beads-list-status-open.md  2026-01-09_14-52-08Z-command-name-clear-command.md  2026-01-31_05-18-07Z-command-name-model-command.md  2026-01-31_05-18-07Z.md  2026-01-31_05-26-00Z-command-name-model-command.md  2026-01-31_06-47-12Z-read-the-docs-work.md  2026-01-31_06-58-53Z-unknown-skill-usgae.md  2026-01-31_06-58-53Z.md
crates/beads/: Cargo.toml
crates/beads-core/: Cargo.toml
crates/beads-core/src/: blob.rs  db.rs  error.rs  error_v2.rs  lib.rs  log.rs  model.rs  query.rs  repo.rs  tz.rs
crates/beads-core/src/utils/: fuzzy.rs  mod.rs
crates/beads-merge-driver/: Cargo.toml
crates/beads-merge-driver/src/: main.rs
crates/beads-tracing/: Cargo.toml
crates/beads-tracing/src/: lib.rs
crates/beads/src/: main.rs
crates/beads/src/cli/: enums.rs  errors.rs  mod.rs
crates/beads/src/commands/: create.rs  delete.rs  dep.rs  doc.rs  init.rs  label.rs  list.rs  mod.rs  ready.rs  search.rs  show.rs  sync.rs  update.rs
crates/beads/src/commands/issue/: create.rs  list.rs  mod.rs  show.rs  update.rs
docs/: DATETIME_QUERIES.md  LABEL_SYSTEM_TESTS.md
docs/plans/: 2025-12-25-advanced-list-views-design.md  2026-01-31-add-created-at-timestamp.md  2026-01-31-better-error-messages-with-snafu.md  2026-01-31-snafu-migration-plan.md
docs/work/: 2025-10-30-design.md  2025-10-31-001-task-beads-gitignore-issue-notes.md  2025-10-31-004918-task-ulid-lww-sync-plan.md  2025-10-31-008-commands-ready-codeplan.md  2025-10-31-blob-plan.md  2025-10-31-bulk-issues.md  2025-10-31-commands-show.md  2025-10-31-labels.md  2025-11-01-004-codeplan.md  2025-11-01-005-codeplan.md  2025-11-01-006-codeplan.md  2025-11-01-007-sync-command-impl.md  2025-11-01-commands-ready.md  2025-11-01-commands-stats.md  2025-11-01-flow.md  2025-11-01-prefix-for-issue-codeplan.md  2025-11-01-spec-flow-002.md  2025-11-03-spec-flow-003.md  2026-01-31-cli-error-handling-final.md  2026-01-31-cli-error-handling-iteration-1.md  2026-01-31-cli-error-handling-iteration-2.md  2026-01-31-cli-error-handling.md  2026-01-31-clippy-warnings-cleanup.md  2026-01-31-evolvable-error-system.md  2026-01-31-evolvable-errors-code-plan.md  2026-01-31-natural-agent-interface-implementation.md  2026-01-31-phase1-completion.md
