[workspace]
members = [
    "crates/beads",
    "crates/beads-core",
    "crates/beads-merge-driver",
    "crates/beads-tracing",
]
resolver = "2"

[workspace.package]
version = "0.3.1"
edition = "2021"
authors = ["Beadify Developers"]

[workspace.dependencies]
anyhow = "1.0"
beads-core = { path = "crates/beads-core" }
beads-tracing = { path = "crates/beads-tracing" }
chrono = "0.4"
clap = { version = "4.5", features = ["derive"] }
owo-colors = "4.0"
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
snafu = "0.8"
strsim = "0.11"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ulid = "1.1"

[profile.release]
strip = "symbols"
opt-level = "z"
lto = true
codegen-units = 1
