[package]
name = "beads-core"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
chrono-tz = { version = "0.8", features = ["serde"] }
owo-colors = { workspace = true, optional = true }
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
snafu.workspace = true
strsim.workspace = true
tracing.workspace = true
ulid.workspace = true

[dev-dependencies]
tempfile = "3.10"
